--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,89 +1,5 @@
 on: [push, pull_request, workflow_dispatch]
 
-name: Build
-
 jobs:
-  build_nicenano_v1:
-    runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:stable
-    name: Build nice_nano_v1
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache west modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-zephyr-modules
-        with:
-          path: |
-            modules/
-            tools/
-            zephyr/
-            bootloader/
-            zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: West Init
-        run: west init -l config
-      - name: West Update
-        run: west update
-      - name: West Zephyr export
-        run: west zephyr-export
-      - name: West Build (KBIC65)
-        run: west build -s zmk/app -b nice_nano -- -DSHIELD=kbic65 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: KBIC65 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 kbic65_nice_nano.uf2
-      - name: Archive (KBIC65)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: kbic65_nice_nano.uf2
-
-  build_nicenano_v2:
-    runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:stable
-    name: Build nice_nano_v2
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache west modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-zephyr-modules
-        with:
-          path: |
-            modules/
-            tools/
-            zephyr/
-            bootloader/
-            zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: West Init
-        run: west init -l config
-      - name: West Update
-        run: west update
-      - name: West Zephyr export
-        run: west zephyr-export
-      - name: West Build (KBIC65)
-        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=kbic65 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: KBIC65 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 kbic65_nice_nano_v2.uf2
-      - name: Archive (KBIC65)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: kbic65_nice_nano_v2.uf2
-
+  build:
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
