--- a/config/boards/shields/kbic65/kbic65.conf
+++ b/config/boards/shields/kbic65/kbic65.conf
@@ -4,10 +4,12 @@
 # Enable Encoders
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_CONN=4
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 # Boost Bluetooth signal strength a bit 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Allow softoff
+CONFIG_ZMK_PM_SOFT_OFF=y
